2011-01-20 Pierre Wieser <pwieser@trychlos.org>

	* src/io-desktop/nadp-desktop-file.c:
	* src/io-desktop/nadp-desktop-file.h:
	* src/io-desktop/nadp-desktop-provider.c:
	* src/io-desktop/nadp-desktop-provider.h:
	* src/io-desktop/nadp-monitor.c:
	* src/io-desktop/nadp-monitor.h: Cosmetic changes in src/io-desktop headers.

	* src/core/na-export-format.h:
	* src/core/na-iabout.h:
	* src/core/na-importer-ask.h:
	* src/core/na-io-provider.h:
	* src/core/na-ipivot-consumer.h:
	* src/core/na-module.h:
	* src/core/na-pivot.h:
	* src/core/na-selected-info.h:
	* src/core/na-settings.h:
	* src/core/na-tokens.h:
	* src/core/na-updater.h: Cosmetic changes in src/core headers.

	* src/api/na-data-boxed.h:
	* src/api/na-data-types.h:
	* src/api/na-gconf-monitor.h:
	* src/api/na-gconf-utils.h:
	* src/api/na-icontext.h:
	* src/api/na-iduplicable.h:
	* src/api/na-iexporter.h:
	* src/api/na-ifactory-object.h:
	* src/api/na-ifactory-provider.h:
	* src/api/na-iio-provider.h:
	* src/api/na-object-action.h:
	* src/api/na-object.h:
	* src/api/na-object-id.h:
	* src/api/na-object-item.h:
	* src/api/na-object-menu.h:
	* src/api/na-object-profile.h:
	* src/core/na-data-boxed.c: Cosmetic changes in src/api headers.

	* src/utils/na-gconf2key.sh.in:
	* tools/check-headers.sh:
	* tools/check-po.sh:
	* tools/init-finalize-diff.sh:
	* tools/release-tarball.sh: Replace basename with a shell substitution.

2011-01-19 Pierre Wieser <pwieser@trychlos.org>

	* tools/release-tarball.sh: Full script rewrite.

	* README-GCONF:
	* Makefile.am: Add README-GCONF to the distribution.

	* tools/check-po.sh: Script rewriting.

	* NEWS: Update before 3.0.7 release.

2011-01-18 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-export-format.c (na_export_format_get_description):
	* src/core/na-importer-ask.c (na_importer_ask_user):
	* src/core/na-importer.c (import_from_uri):
	* src/core/na-io-provider.c (na_io_provider_get_name):
	* src/core/na-iprefs.c:
	* src/core/na-iprefs.h (na_iprefs_get_import_mode,